# confere-mega-sena

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
rsc/: main.py
src/: main.py
src/models/: criar_tabelas.py  models.py
src/test/: test_site.py
