[tool.poetry]
name = "confere-apostas"
version = "0.1.0"
description = ""
authors = ["Antonio Sousa <antonioufpi@gmail.com>"]
readme = "README.md"
packages = [{include = "confere_apostas"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pylint = "^2.15.7"
mypy = "^0.991"
ipython = "^8.7.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
